--- a/index.html
+++ b/index.html
@@ -51,102 +51,136 @@
       </div>
     </section>
 
-    <section class="advantages-section">
-      <h2 class="advantages-title">Our advantages</h2>
-      <ul class="advantages-list">
-        <li class="advantages-item">
-          <h3 class="advantages-item-title">Strategy</h3>
-          <p class="advantages-item-text">
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </li>
-        <li class="advantages-item">
-          <h3 class="advantages-item-title">Punctuality</h3>
-          <p class="advantages-item-text">
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </li>
-        <li class="advantages-item">
-          <h3 class="advantages-item-title">Diligence</h3>
-          <p class="advantages-item-text">
-            Research and confirm brands with the strongest digital growth
-            opportunities and minimize risk.
-          </p>
-        </li>
-        <li class="advantages-item">
-          <h3 class="advantages-item-title">Technologies</h3>
-          <p class="advantages-item-text">
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </li>
-      </ul>
+    <section class="features-section">
+      <div class="container">
+        <h2 class="visually-hidden">Our advantages</h2>
+        <ul class="features-list">
+          <li class="features-item">
+            <h3 class="features-title">Strategy</h3>
+            <p class="features-text">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li class="features-item">
+            <h3 class="features-title">Punctuality</h3>
+            <p class="features-text">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li class="features-item">
+            <h3 class="features-title">Diligence</h3>
+            <p class="features-text">
+              Research and confirm brands with the strongest digital growth
+              opportunities and minimize risk.
+            </p>
+          </li>
+          <li class="features-item">
+            <h3 class="features-title">Technologies</h3>
+            <p class="features-text">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </div>
     </section>
-    <section class="our-team">
-      <h2 class="section-title main">Our Team</h2>
-      <ul class="section-list">
-        <li class="section-item">
-          <img src="./images/avatar/Mark_Guerrero.jpg" alt="Mark Guerrero" width="264" />
-          <h3 class="team-name">Mark Guerrero</h3>
-          <p class="team-role">Product Designer</p>
-        </li>
-        <li class="section-item">
-          <img src="./images/avatar/Tom_Ford.png" alt="Tom Ford" width="264" />
-          <h3 class="team-name">Tom Ford</h3>
-          <p class="team-role">Frontend Developer</p>
-        </li>
-        <li class="section-item">
-          <img src="./images/avatar/Camila_Garcia.png" alt="Camila Garcia" width="264" />
-          <h3 class="team-name">Camila Garcia</h3>
-          <p class="team-role">Marketing</p>
-        </li>
-        <li class="section-item">
-          <img src="./images/avatar/Daniel_Willson.png" alt="Daniel Wilson" width="264" />
-          <h3 class="team-name">Daniel Wilson</h3>
-          <p class="team-role">UI Designer</p>
-        </li>
-      </ul>
+    <section class="team-section">
+      <div class="container">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
+            <img src="./images/avatar/Mark_Guerrero.jpg" alt="Mark Guerrero" width="264" />
+            <div class="team-info">
+              <h3 class="team-name">Mark Guerrero</h3>
+              <p class="team-position">Product Designer</p>
+            </div>
+          </li>
+          <li class="team-item">
+            <img src="./images/avatar/Tom_Ford.png" alt="Tom Ford" width="264" />
+            <div class="team-info">
+              <h3 class="team-name">Tom Ford</h3>
+              <p class="team-position">Frontend Developer</p>
+            </div>
+          </li>
+          <li class="team-item">
+            <img src="./images/avatar/Camila_Garcia.png" alt="Camila Garcia" width="264" />
+            <div class="team-info">
+              <h3 class="team-name">Camila Garcia</h3>
+              <p class="team-position">Marketing</p>
+            </div>
+          </li>
+          <li class="team-item">
+            <img src="./images/avatar/Daniel_Willson.png" alt="Daniel Wilson" width="264" />
+            <div class="team-info">
+              <h3 class="team-name">Daniel Wilson</h3>
+              <p class="team-position">UI Designer</p>
+            </div>
+          </li>
+        </ul>
+      </div>
     </section>
     <!-- our portfolio -->
-    <section class="our-portfolio">
-      <h2 class="section-title">Our Portfolio</h2>
-      <ul class="portfolio-list">
-        <li class="portfolio-item"><img src="./images/apps/banking-app.jpg" alt="Project 1" width="360" />
-          <h3 class="portfolio-title">Banking App</h3>
-          <p class="portfolio-description">App</p>
-        </li>
-        <li class="portfolio-item"><img src="./images/apps/payment.jpg" alt="Project 2" width="360" />
-          <h3 class="portfolio-title">Cashless Payment</h3>
-          <p class="portfolio-description">Marketing</p>
-        </li>
-        <li class="portfolio-item"><img src="./images/apps/meditaion.jpg" alt="Project 3" width="360" />
-          <h3 class="portfolio-title">Meditation App</h3>
-          <p class="portfolio-description">App</p>
-        </li>
-        <li class="portfolio-item"><img src="./images/apps/taxowka.jpg" alt="Project 4" width="360" />
-          <h3 class="portfolio-title">Taxi Service</h3>
-          <p class="portfolio-description">Marketing</p>
-        </li>
-        <li class="portfolio-item"><img src="./images/apps/screenilu.jpg" alt="Project 5" width="360" />
-          <h3 class="portfolio-title">Screen Illustrations</h3>
-          <p class="portfolio-description">Design</p>
-        </li>
-        <li class="portfolio-item"><img src="./images/apps/courses1.jpg" alt="Project 6" width="360" />
-          <h3 class="portfolio-title">Online Courses</h3>
-          <p class="portfolio-description">Marketing</p>  
-        </li>
-      </ul>
+    <section class="portfolio-section">
+      <div class="container">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
+            <img src="./images/apps/banking-app.jpg" alt="Project 1" width="360" />
+            <div class="portfolio-info">
+              <h3 class="portfolio-name">Banking App</h3>
+              <p class="portfolio-category">App</p>
+            </div>
+          </li>
+          <li class="portfolio-item">
+            <img src="./images/apps/payment.jpg" alt="Project 2" width="360" />
+            <div class="portfolio-info">
+              <h3 class="portfolio-name">Cashless Payment</h3>
+              <p class="portfolio-category">Marketing</p>
+            </div>
+          </li>
+          <li class="portfolio-item">
+            <img src="./images/apps/meditaion.jpg" alt="Project 3" width="360" />
+            <div class="portfolio-info">
+              <h3 class="portfolio-name">Meditation App</h3>
+              <p class="portfolio-category">App</p>
+            </div>
+          </li>
+          <li class="portfolio-item">
+            <img src="./images/apps/taxowka.jpg" alt="Project 4" width="360" />
+            <div class="portfolio-info">
+              <h3 class="portfolio-name">Taxi Service</h3>
+              <p class="portfolio-category">Marketing</p>
+            </div>
+          </li>
+          <li class="portfolio-item">
+            <img src="./images/apps/screenilu.jpg" alt="Project 5" width="360" />
+            <div class="portfolio-info">
+              <h3 class="portfolio-name">Screen Illustrations</h3>
+              <p class="portfolio-category">Design</p>
+            </div>
+          </li>
+          <li class="portfolio-item">
+            <img src="./images/apps/courses1.jpg" alt="Project 6" width="360" />
+            <div class="portfolio-info">
+              <h3 class="portfolio-name">Online Courses</h3>
+              <p class="portfolio-category">Marketing</p>
+            </div>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
   <!-- Footer -->
-  <footer class="footer-main">
-    <a class="footer-logo" href="./index.html">Web<span class="footer-span">Studio</span></a>
-    <p class="footer-title">
-      Increase the flow of customers and sales for your business with digital
-      marketing & growth solutions.
-    </p>
+  <footer class="footer-section">
+    <div class="container">
+      <a class="footer-logo" href="./index.html">Web<span class="footer-span">Studio</span></a>
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </div>
   </footer>
 </body>
 
